# MQDispatcher

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  MQDispatcher.hpp  block_on_overflow_strategy.hpp  drop_on_overflow_strategy.hpp  exchange_on_overflow_strategy.hpp  interfaces.hpp  list_queue.hpp  lockfree_queue.hpp  queue_context.hpp
tests/: CMakeLists.txt  mqdispatcher_stress_tests.cpp  mqdispatcher_tests.cpp
